# AvxWindowFmIndex

./: .clang-format  .gitignore  .gitmodules  AwFmBacktraceVector.c  AwFmCreate.c  AwFmCreate.h  AwFmFile.c  AwFmFile.h  AwFmGlobals.h  AwFmIndex.c  AwFmIndex.h  AwFmKmerTable.c  AwFmKmerTable.h  AwFmLetter.c  AwFmLetter.h  AwFmOccupancy.c  AwFmOccupancy.h  AwFmOccurances.c  AwFmOccurances.h  AwFmOccurrence.c  AwFmOccurrence.h  AwFmParallelSearch.c  AwFmParallelSearch.h  AwFmSearch.c  AwFmSearch.h  AwFmVector.c  AwFmVector.h  CMakeLists.txt  DesignDoc.txt  Dockerfile_build  Doxyfile  FmAwGlobals.h  LICENSE  Makefile  Makefile_legacy  README.md  makefile
.github/workflows/: build-and-test.yml
lib/: CMakeLists.txt
src/: AwFmBacktraceVector.c  AwFmBacktraceVector.h  AwFmCreate.c  AwFmCreate.h  AwFmDiagnose.c  AwFmFile.c  AwFmFile.h  AwFmIndex.c  AwFmIndex.h  AwFmIndexStruct.c  AwFmIndexStruct.h  AwFmKmerTable.c  AwFmKmerTable.h  AwFmLetter.c  AwFmLetter.h  AwFmOccurrence.c  AwFmOccurrence.h  AwFmParallelSearch.c  AwFmParallelSearch.h  AwFmSearch.c  AwFmSearch.h  AwFmSimdConfig.c  AwFmSimdConfig.h  AwFmSuffixArray.c  AwFmSuffixArray.h
test/: README.md  occSpeedTest.c  test.h
test/backtraceTest/: backtraceTest.c  makefile
test/bwtTest/: bwtTest.c  makefile
test/createTests/: AwFmCreationTest.c  makefile
test/fileTests/: AwFmFileTests.c  makefile
test/inMemorySaTest/: inMemorySaTest.c  makefile
test/kmerSeedTableTests/: kmerSeedTableTests.c  makefile
test/letterTest/: AwFmLetterTest.c  makefile
test/multiSequenceIndexTest/: AwFmMultiSequenceTest.c  makefile  sequences.fasta  test.fasta  test2.fa
test/occupancyPerformanceTest/: makefile  occSpeedTest.c
test/occurrenceTests/: makefile  occurrenceTests.c
test/parallelSearch/: makefile  parallelSearchTest.c
test/popcountTest/: makefile  popcountTest.c
test/searchTest/: makefile  searchTest.c
test/sharedLibTest/: awfmiTest.c  makefile  test.fa
test/staticLibTest/: awfmiTest.c  makefile
test/suffixArrayCompressionTests/: makefile  saTest.c
tool/: build-builder-image.sh  check-format.sh  push-builder-image.sh  run-format.sh
tuning/search/: makefile  timeSearch.c
